# promtior-help-bot

api/app/: server.py
api/app/utils/: agent.py  base.py  chain.py
doc/: project-overview.md
src/: .env.example  Dockerfile  README.md  pyproject.toml  start.sh
src/api/: .env.example  Dockerfile  pyproject.toml
src/api/app/utils/: base.py  chain.py
src/app/: server.py  ui.py
src/app/utils/: base.py  chain.py
src/ui/: .env.example  ui.py
ui/: ui.py
