[tool.poetry]
name = "promtior-help-bot-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = "^0.3.1"
langchain = "^0.3.19"
langchain-cohere = "^0.4.2"
langchain-groq = "^0.2.4"
langchain-community = "^0.3.18"
langgraph = "^0.3.2"
pypdf = "^5.3.1"
bs4 = "^0.0.2"
streamlit = "^1.42.2"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
